# Practice-Set

./: README.md
CLI/: basics.js  commands.js  temp.cjs
CLI-2/: package-lock.json
Concurrency/: async.py  hybrid.py  multi_process.py  multi_thread.py  sync.py
DSA & Algorithms/: kotak_transc.py  patterns.md  temp.py
Data Engineering/: facts.md  temp.md  temp.sql
Data Engineering/Apache_Spark/example/: .env  .gitignore  main.py  pyproject.toml
Data Engineering/Apache_Spark/example/usecase/: file.py
Data Engineering/Spark_Practical/: pyproject.toml
Data Engineering/Spark_Practical/src/: bronze_layer.ipynb
Data Engineering/Spark_Practical/src/data/stream_data/: temp_session.json
Docker/: .env  .prettierrc  Dockerfile  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
E-commerce (only logic)/: .env  package-lock.json  package.json  tsconfig.json
Golang/: basics.go  game.go  go.mod  process_vs_thread.md
GraphQL and Prisma/: .env  package-lock.json  package.json  server.js  test.js
HTML/: 1.html  2.css  2.html  2.js  3.css  3.html  Container.css  Containers.html  Form.css  Form.html  HTML.code-workspace  Introduction  Layout&boxmodel.html  List.html  Nav.css  Nav.html  Nested_Layout.html  Pic.avif  Positions.html  Temp2.html  (+4 more)
Python/Coding/Development/Django/DJANGO-FINAL/: .gitignore  db.sqlite3  pyproject.toml
Python/Coding/Development/Django/DJANGO-FINAL/rest_api/: apps.py
Python/Coding/Development/Django/DJANGO-FINAL/src/: settings.py
Python/Coding/Development/Django/DJANGO-FINAL/src/authentication/: models.py  tasks.py
Python/Coding/Development/Django/DJANGO-FINAL/src/authentication/migrations/: 0001_initial.py
Python/Coding/Development/Django/DJANGO-FINAL/src/logs/request_logs/: requests.log.2025-05-15
Python/Coding/Development/Django/DJANGO-FINAL/src/main/: urls.py  views.py
Python/Coding/Development/Django/DJANGO-FINAL/src/utils/: envs.py  templates.py
Python/Coding/Development/Django/DJANGO-FINAL/src/utils/db_and_cache/: databases.py
Python/Coding/Development/Django/DJANGO-FINAL/src/utils/drf/: installed_apps.py  middlewares.py
Python/Coding/Development/Django/DJANGO-FINAL/src/utils/logging/: api_audit.py  exception_handler.py
Python/Coding/Development/Django/begin/: .pdm-python  db.sqlite3  pyproject.toml
Python/Coding/Development/Django/begin/products/: models.py
Python/Coding/Development/Django/begin/products/migrations/: 0001_initial.py  0002_product_featured_alter_product_summary.py
Python/Coding/Development/Django/begin/src/: settings.py
Python/Coding/Development/Django/supabase_django_project_2/: .env  .pdm-python  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml  readme.md  requestFlow.md  temp.yml
Python/Coding/Development/Django/supabase_django_project_2/api/: admin.py  urls.py  views.py
Python/Coding/Development/Django/supabase_django_project_2/api/management/commands/: populate_db.py
Python/Coding/Development/Django/supabase_django_project_2/api/model/: address.py  album.py  images.py  post.py  todo.py
Python/Coding/Development/Django/supabase_django_project_2/api/seed/: populate.py
Python/Coding/Development/Django/supabase_django_project_2/api/serializer/: address.py  images.py  post.py  todo.py  user.py
Python/Coding/Development/Django/supabase_django_project_2/api/view/: album.py  baseView.py  images.py  todo.py
Python/Coding/Development/Django/supabase_django_project_2/core/: .gitignore  settings.py  temp.py  urls.py
Python/Coding/Development/Django/supabase_django_project_2/core/utils/: DRF_settings.py  app_pass_validators.py  caching.py  envs.py  exceptional_handler.py  installed_apps.py  middlewares.py  templates.py
Python/Coding/Development/Django/supabase_django_project_2/core/utils/drf/: DRF_settings.py  middlewares.py
Python/Coding/Development/Django/supabase_django_project_2/core/utils/logging/: exception_handler.py  sentry.py
Python/Coding/Development/Django/supabase_django_project_2/filebeat/config/: filebeat.yml
Python/Coding/Development/Django/supabase_django_project_2/kibana/: export.ndjson
Python/Coding/Development/Django/supabase_django_project_2/logstash/config/: logstash.yml
Python/Coding/Development/Django/supabase_django_project_2/logstash/pipeline/: django-logs.conf
Python/Coding/Development/Django/supabase_django_project_2/src/api/: views.py
Python/Coding/Development/Django/supabase_django_project_2/src/api/migrations/: 0001_initial.py  0002_alter_address_city_alter_address_country_and_more.py
Python/Coding/Development/Django/supabase_django_project_2/src/api/model/: address.py  album.py  images.py  post.py  todo.py
Python/Coding/Development/Django/supabase_django_project_2/src/api/serializer/: address.py  album.py
Python/Coding/Development/Django/supabase_django_project_2/src/api/view/: home.py  ownerPermission.py
Python/Coding/Development/Django/supabase_django_project_2/src/authentication/: models.py
Python/Coding/Development/Django/supabase_django_project_2/src/core/: settings.py  urls.py
Python/Coding/Development/Django/supabase_django_project_2/src/core/utils/drf/: installed_apps.py  middlewares.py
Python/Coding/Development/Django/supabase_django_project_2/src/core/utils/logging/: api_audit.py  elk_config.py  exception_handler.py  sentry.py
Python/Coding/Development/Django/supabase_django_project_2/src/filebeat/: filebeat.yml
Python/Coding/Development/Django/supabase_django_project_2/src/logstash/pipeline/: django.conf
Python/Coding/Development/Django/supabase_django_project_2/src/templates/home/: index.html
Python/Coding/Development/Django/supabase_django_project_2/src/utils/db_and_cache/: caching.py  databases.py
Python/Coding/Development/Django/supabase_django_project_2/src/utils/drf/: DRF_settings.py  installed_apps.py  middlewares.py
Python/Coding/Development/Django/supabase_django_project_2/src/utils/logging/: api_audit.py  elk_config.py  exception_handler.py
Python/Coding/Development/project_initialisation_new_way/: .pdm-python  pyproject.toml
(+1549 files in other folders)
