[project]
name = "example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sid.", email = "siddhantg2002@gmail.com"},
]
dependencies = ["pyspark>=4.0.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
